# multi-agent-movie-intelligence

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/: chatbot_interface.py  engine.py  main.py  movie_agents.py  rest_endpoints.py  server_endpoints.py  server_schemas.py  ui.py
src/backend/: api_models.py  movie_agents.py  rest_endpoints.py
src/frontend/: chatbot_interface.py
