[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "appliedai-movie-agent"
version = "0.1.0"
description = "multi-agent movie intelligence system"
readme = "README.md"
requires-python = ">=3.12,<3.14"

authors = [
  { name = "Nagaraju Javisetty", email = "nagajavisetty143@gmail.com" }
]

dependencies = [
    "langchain==1.2.7",
    "langgraph==1.0.7",
    "langchain-openai==1.1.7",
    "sqlalchemy==2.0.46",
    "chromadb==1.4.1",
    "langchain-chroma==1.1.0",
    "pypdf>=6.6.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters==1.1.0",
    "langchain-tavily==0.2.17",
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "gradio==6.4.0",
    "requests==2.32.5",
]

[project.optional-dependencies]
dev = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
extend-select = [
    "PLE", "PLW", "PLC", "PLR", "FAST", "I", "D419",
    "E501", "W291", "UP004", "C416", "B033", "E722"
]


[tool.hatch.build.targets.wheel]
packages = ["src"]
